--- a/coding/NgheizitApp/app/src/main/res/layout/activity_main.xml
+++ b/coding/NgheizitApp/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:background="@drawable/pens"
-    android:padding="25dp">
+    android:paddingTop="25dp">
 
 
     <!--登录界面辅助样式-->
@@ -32,7 +32,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,7 +51,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,17 +69,50 @@
             android:hint="Please enter password...  "/>
     </LinearLayout>
 
-
-    <!--登录按钮-->
-    <Button
-        android:id="@+id/btn_signin"
+    <!-- 按钮 -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Sign in"/>
+        android:orientation="horizontal"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp">
 
+        <!--登录按钮-->
+        <Button
+            android:id="@+id/btn_signin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:layout_marginTop="15dp"
+            android:text="Sign in"/>
 
+        <!-- 跳过登录按钮 -->
+        <Button
+            android:id="@+id/btn_jump"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:layout_marginTop="15dp"
+            android:text="Jump over"/>
 
+    </LinearLayout>
 
+    <!-- 底部信息 -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:background="#89000000"
+            android:textColor="#89ffffff"
+            android:padding="2dp"
+            android:text="@string/copyright"/>
+
+    </RelativeLayout>
 </LinearLayout>
+
+
