--- a/coding/NgheizitApp/app/src/main/res/values/styles.xml
+++ b/coding/NgheizitApp/app/src/main/res/values/styles.xml
@@ -8,4 +8,24 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="DirListItem">
+        <item name="android:layout_height">75dp</item>
+        <item name="android:background">@drawable/corsers_bg</item>
+        <item name="android:padding">5dp</item>
+    </style>
+    <style name="DirListItem_title">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:fontFamily">monospace</item>
+        <item name="android:layout_marginBottom">45dp</item>
+    </style>
+    <style name="DirListItem_description">
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:textColor">#fff</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">monospace</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
 </resources>
