--- a/coding/XizheMap/app/src/main/res/values/ids.xml
+++ b/coding/XizheMap/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item name="dir_items_AddFeatures" type="id">dir_items_AddFeatures</item>
     <item name="dir_items_DisplayDeviceLocation" type="id">dir_items_DisplayDeviceLocation</item>
+    <item name="dir_items_ChangeSublayerVisibility" type="id">dir_items_ChangeSublayerVisibility</item>
 </resources>
