--- a/coding/XizheMap/app/src/main/res/layout/activity_changesublayervisivility.xml
+++ b/coding/XizheMap/app/src/main/res/layout/activity_changesublayervisivility.xml
@@ -4,4 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <com.esri.arcgisruntime.mapping.view.MapView
+            android:id="@+id/axMapView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </com.esri.arcgisruntime.mapping.view.MapView>
+
+
+
 </LinearLayout>
