--- a/coding/XizheMap/app/src/main/res/layout/activity_displaydevicelocation.xml
+++ b/coding/XizheMap/app/src/main/res/layout/activity_displaydevicelocation.xml
@@ -7,9 +7,16 @@
     <com.esri.arcgisruntime.mapping.view.MapView
             android:id="@+id/axMapView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
     </com.esri.arcgisruntime.mapping.view.MapView>
+
+    <TextView
+            android:id="@+id/tv_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:background="#50ffffff"/>
 
     <Spinner
             android:id="@+id/spinner"
