--- a/coding/XizheMap/app/src/main/res/layout/activity_displaydevicelocation.xml
+++ b/coding/XizheMap/app/src/main/res/layout/activity_displaydevicelocation.xml
@@ -15,8 +15,36 @@
             android:id="@+id/tv_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:padding="5dp"
             android:textSize="24sp"
             android:background="#50ffffff"/>
+
+    <LinearLayout
+            android:layout_alignParentRight="true"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                android:textSize="24sp"
+                android:background="#50ffffff"/>
+
+        <TextView
+                android:id="@+id/tv_time2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:padding="5dp"
+                android:textSize="24sp"
+                android:background="#50ffffff"/>
+    </LinearLayout>
+
+
 
     <Spinner
             android:id="@+id/spinner"
@@ -27,5 +55,14 @@
             android:layout_marginBottom="22dp"
             android:background="#00000000"
             android:popupBackground="#00000000"/>
+
+    <Button
+            android:id="@+id/btn_trajectory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="22dp"
+            android:text="START"/>
 
 </RelativeLayout>
