--- a/coding/XizheMap/app/src/main/res/layout/activity_oauth.xml
+++ b/coding/XizheMap/app/src/main/res/layout/activity_oauth.xml
@@ -4,12 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/tv_show"
+    <com.esri.arcgisruntime.mapping.view.MapView
+            android:id="@+id/axMapView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent">
+
+    </com.esri.arcgisruntime.mapping.view.MapView>
 
 </LinearLayout>
