--- a/coding/HeizitMap/app/src/main/res/layout/activity_tian_di_tu.xml
+++ b/coding/HeizitMap/app/src/main/res/layout/activity_tian_di_tu.xml
@@ -12,5 +12,33 @@
 
     </com.esri.arcgisruntime.mapping.view.MapView>
 
+    <Button
+        android:id="@+id/btn_locate"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:background="@drawable/locate"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="10dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true">
+        <Button
+            android:id="@+id/btn_zoomIn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/add"
+            android:layout_marginBottom="10dp"/>
+        <Button
+            android:id="@+id/btn_zoomOut"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/sub" />
+    </LinearLayout>
+
 
 </RelativeLayout>
