--- a/coding/HeizitMap/app/src/main/res/values/ids.xml
+++ b/coding/HeizitMap/app/src/main/res/values/ids.xml
@@ -4,5 +4,6 @@
     <item name="links_tian_di_tu" type="id" />
     <item name="links_question" type="id" />
     <item name="links_device_gps" type="id" />
+    <item name="links_device_gps_3d" type="id" />
 
 </resources>
