--- a/coding/ExamApp/app/src/main/res/layout/activity_main.xml
+++ b/coding/ExamApp/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,27 @@
         android:layout_height="match_parent">
     </com.esri.arcgisruntime.mapping.view.SceneView>
 
-    <EditText
-        android:id="@+id/axEditText_Password"
-        android:layout_centerVertical="true"
-        android:layout_margin="20dp"
-        android:textSize="28sp"
-        android:textColor="#aaffffff"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:orientation="vertical"
+        android:layout_centerVertical="true">
+        <EditText
+            android:id="@+id/axEditText_Usename"
+            android:hint="用户名......"
+            android:textSize="28sp"
+            android:textColor="#aaffffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/axEditText_Password"
+            android:hint="密码......"
+            android:textSize="28sp"
+            android:textColor="#aaffffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
 
 </RelativeLayout>
